src/app/hero-banner/hero-banner.module.css
.parallax {
  background-image: url(/banner.jpg);
  min-height: 700px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.title {
  display: flex;
  flex-direction: column;
  font-size: 48px;
  padding: 0 10rem;
  position: absolute;
  text-align: center;
  top: 235px;
  @media screen and (max-width: 767px) {
    padding: 0 4rem;
  }
}

.chevron {
  font-size: 50px;
  padding-top: 8rem;
  @media screen and (max-width: 767px) {
    padding-top: 4rem;
  }
}

